tests/smoke/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallarm-workload-master
  annotations:
    nginx.org/mergeable-ingress-type: "master"
spec:
  ingressClassName: nginx
  rules:
  - host: nginx-ingress-wallarm-ingress-controller.default.svc

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
    nginx.org/wallarm-mode: block
  name: wallarm-workload
spec:
  ingressClassName: nginx
  rules:
    - host: nginx-ingress-wallarm-ingress-controller.default.svc
      http:
        paths:
          - backend:
              service:
                name: workload
                port:
                  number: 80
            path: /
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
    nginx.org/wallarm-mode: block
    nginx.org/location-snippets: |
      rewrite ^/wallarm-application(/.*)$ $1 break;
      wallarm_application $http_custom_id;
  name: wallarm-api-abuse
spec:
  ingressClassName: nginx
  rules:
    - host: nginx-ingress-wallarm-ingress-controller.default.svc
      http:
        paths:
          - backend:
              service:
                name: workload
                port:
                  number: 80
            path: /wallarm-application
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
    nginx.org/wallarm-mode: block
    nginx.org/location-snippets: |
      wallarm_application $http_custom_id;
  name: wallarm-api-discovery
spec:
  ingressClassName: nginx
  rules:
    - host: nginx-ingress-wallarm-ingress-controller.default.svc
      http:
        paths:
          - backend:
              service:
                name: workload
                port:
                  number: 80
            path: /api-discovery-test
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
    nginx.org/wallarm-mode: block
    nginx.org/location-snippets: |
      wallarm_application $http_custom_id;
  name: block-by-tor-ip
spec:
  ingressClassName: nginx
  rules:
    - host: nginx-ingress-wallarm-ingress-controller.default.svc
      http:
        paths:
          - backend:
              service:
                name: workload
                port:
                  number: 80
            path: /blocking-by-tor-test
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
    nginx.org/wallarm-mode: monitoring
  name: wallarm-mode-monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: nginx-ingress-wallarm-ingress-controller.default.svc
      http:
        paths:
          - backend:
              service:
                name: workload
                port:
                  number: 80
            path: /wallarm-mode/monitoring
            pathType: Prefix
